fixed nav bar so i can align my images

--- a/style.css/style.css
+++ b/style.css/style.css
@@ -17,8 +17,9 @@ nav {
 
 article {
     display: inline-block;
+    width: 33%;
     text-align: center;
-    height: 200px;
+    padding: 15px 15px 15px 15px;
 }
 
 article img {
